Bug 618422 - Fix MSVC warning in profiler (r=dmandelin)